tests/fixtures/invalid/int_in_int.py
# Cannot use 'in' with Int and Int
x: bool = 1 in 2
